fixed some width issues also image not showing problem

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 80%;
+    max-width: 80%;
     margin: 0 auto;
 }
 .icon p{
@@ -42,13 +42,17 @@ a:first-child{
 }
 .hero{
     background-color: #F7F6F0;
-    width: 70%;
+    max-width: 1300px;
     display: flex;
     margin: 4rem auto;
     justify-content: space-between;
     align-items: center;
     padding: 2rem;
 }
+.img-div{
+    width: 15%;
+}
+
 .text-div{
     text-align: center;
     width: 20%;
@@ -71,9 +75,8 @@ a:first-child{
     font-size: 1rem;
 }
 .collection-section{
-    width: 70%;
+    max-width: 70%;
     margin: 3rem auto;
-
     padding: 3rem 2rem;
 }
 .collection-section h3{
@@ -87,11 +90,16 @@ a:first-child{
     justify-content: space-between;
 }
 .product-div{
+    width: 28%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 1rem;
+}
+.inner-img img{
+    height: 100%;
+    width: 100%;
 }
 .product-text{
     font-size: 2rem;
